Update solar simuland

--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -15,7 +15,7 @@
 }
 
 .projectCard {
-  @apply rounded-xl h-72 border-blue-100;
+  @apply rounded-xl h-72 border-blue-100 border-2;
 }
 
 .fileIconImg {
