--- a/src/modules/auth/Login/Login.css
+++ b/src/modules/auth/Login/Login.css
@@ -3,5 +3,5 @@
 }
 
 .formSubmitBtn {
-  @apply w-full py-3 text-white bg-blue-800 mt-2 hover:bg-white hover:border hover:text-blue-500 hover:border-blue-400 duration-500 rounded-xl;
+  @apply w-full text-white bg-blue-800 mt-2 hover:bg-white hover:border hover:text-blue-500 hover:border-blue-400 duration-500 rounded-xl;
 }
